# Point-Cloud-Object-Recognition

./: CMakeLists.txt  README.md  package.xml
src/: 1._pclCapturer.cpp  2._sliderParameter.cpp  3._pclObjectDetection.cpp  4_ROSpclRecognition.cpp  5._Visualizer.cpp  argc.cpp  centroid.cpp  cobaCapture.cpp  cobaCaptureViewer.cpp  cobaCaptureViewerRGBD.cpp  cobaCropPCL.cpp  coba_iluminasi.cpp  cobacoba.cpp  convert.cpp  cropSubscribe.cpp  cvtColor.cpp  hypoVerification.cpp  ikm_main_camera.cpp  ism.cpp  main.cpp  min_max_XYZ.cpp  new_correspondence.cpp  new_correspondence_backup.cpp  new_vfh.cpp  normalEst.cpp  offlineRecognitionSHOT.cpp  pclCreateDatabase.cpp  pclViewer.cpp  pcl_write.cpp  pcl_write_viewer.cpp  sliderCV.cpp  sliderSub.cpp
